correct a spelling mistake

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -143,7 +143,7 @@ main section {
 
 }
 
-/* resime section styles */
+/* resume section styles */
 .resume-column-title {
     color: #474747;
     font-size: 30px;
